--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ rocket = {version="0.5.0-rc.2", features=["json"]}
 sha2 = "0.10.5"
 serde = {version="1.0", features=["derive"]}
 serde_json = "1.0"
+hex = "0.4.3"
